Melhoria no código do professor
- Bugs na transição da página de alteração de dados para visualização de dados corrigidos;
- Limpeza no código e otimização de alguns processos;